--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,29 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+@import url("https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@200;300;400;500;600;700;800&display=swap");
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  /* font-family: "SF Pro Display", -apple-system, BlinkMacSystemFont, Segoe UI,
+    Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue,
+    sans-serif; */
+  font-family: "Plus Jakarta Sans", -apple-system, BlinkMacSystemFont;
+  /* @apply font-sans; */
+}
+
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+input,
+a,
+textarea {
+  @apply antialiased subpixel-antialiased;
 }
 
 a {
@@ -13,4 +33,22 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+@keyframes popup {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes slideDown {
+  0% {
+    transform: translateY(-10em);
+  }
+  100% {
+    transform: translateY(0);
+  }
 }
