--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,6 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
 @import url("https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@200;300;400;500;600;700;800&display=swap");
 html,
 body {
@@ -9,7 +10,8 @@ body {
   /* font-family: "SF Pro Display", -apple-system, BlinkMacSystemFont, Segoe UI,
     Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue,
     sans-serif; */
-  font-family: "Plus Jakarta Sans", -apple-system, BlinkMacSystemFont;
+  font-family: "Plus Jakarta Sans", "Ubuntu", "Inter", "Roboto", Arial,
+    Helvetica, sans-serif, -apple-system, BlinkMacSystemFont;
   /* @apply font-sans; */
 }
 
